syntax = "proto3";

//option csharp_namespace = "Draught_Drinks_Store_GRPC";

package order.v1;


service Order {
  rpc Place (PlaceRequest) returns (OrderStatusResponce);
  rpc GetOrderStatus (OrderStatusRequest) returns (OrderStatusResponce);
}

message ProductOrder{
	int32 id = 1;
	int32 count = 2;
}

message PlaceRequest{
	repeated ProductOrder products = 1;
	reserved 2;								// promocode
	reserved 3;								// shop id
}

message OrderStatusRequest{
	int32 id = 1;
}

message OrderStatusResponce{
	int32 number = 1;
	string date = 2;
	string status = 3;
	string sum = 4;
	reserved 5;								// shop
	string payment_link = 6;
}